--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "time-grunt": "^1.0.0"
   },
   "scripts": {
-    "test": "echo 'No test defined'"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MRN-Code/nodeapi.git"
+    "url": "https://github.com/MRN-Code/node_boilerplate.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MRN-Code/nodeapi/issues"
+    "url": "https://github.com/MRN-Code/node_boilerplate/issues"
   },
-  "homepage": "https://github.com/MRN-Code/nodeapi"
+  "homepage": "https://github.com/MRN-Code/node_boilerplate"
 }
