--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "nodeapi",
-  "version": "0.0.0",
-  "description": "Node project boilerplate for COINS",
+  "name": "bookshelf-shield",
+  "version": "0.0.1",
+  "description": "Access control list based authorization for bookshelf models",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "config": "^1.11.0"
+    "config": "1.11.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-jscs": "^1.5.0",
-    "grunt-mocha-cli": "^1.12.0",
-    "load-grunt-config": "^0.16.0",
-    "load-grunt-tasks": "^3.1.0",
-    "should": "^5.0.0",
-    "time-grunt": "^1.0.0"
+    "grunt": "0.4.5",
+    "grunt-contrib-jshint": "0.11.0",
+    "grunt-jscs": "1.5.0",
+    "grunt-mocha-cli": "1.12.0",
+    "load-grunt-config": "0.16.0",
+    "load-grunt-tasks": "3.1.0",
+    "should": "5.0.0",
+    "time-grunt": "1.0.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MRN-Code/node_boilerplate.git"
+    "url": "https://github.com/dylancwood/bookshelf-shield.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MRN-Code/node_boilerplate/issues"
+    "url": "https://github.com/dylancwood/bookshelf-shield/issues"
   },
-  "homepage": "https://github.com/MRN-Code/node_boilerplate"
+  "homepage": "https://github.com/dylancwood/bookshelf-shield"
 }
