--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "test": "test"
   },
   "dependencies": {
-    "config": "1.11.0"
+    "babel": "5.1.10",
+    "create-error": "0.3.1",
+    "lodash": "3.6.0",
+    "relations": "0.5.0",
+    "thenify-all": "1.6.0"
   },
   "devDependencies": {
+    "bookshelf": "0.7.9",
     "grunt": "0.4.5",
     "grunt-contrib-jshint": "0.11.0",
     "grunt-jscs": "1.5.0",
     "grunt-mocha-cli": "1.12.0",
+    "knex": "0.7.6",
     "load-grunt-config": "0.16.0",
     "load-grunt-tasks": "3.1.0",
+    "pg": "4.3.0",
+    "relations": "0.5.0",
     "should": "5.0.0",
     "time-grunt": "1.0.0"
   },
