correct lint script paths

--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
   },
   "scripts": {
     "test": "grunt test",
-    "lint": "jshint lib/. test/.",
+    "lint": "jscs lib/ test/",
     "validate": "npm ls",
     "build": "babel --out-dir=dist lib && git add dist/*",
     "preversion": "git checkout master && git pull && npm ls",
     "publish-patch": "npm run preversion && npm version patch && git push origin master --tags && npm publish",
     "publish-minor": "npm run preversion && npm version minor && git push origin master --tags && npm publish",
     "publish-major": "npm run preversion && npm version major && git push origin master --tags && npm publish",
-    "lintfix": "jscs --fix src/**/*.js test/**/*.js",
-    "postlint": "jshint src/**/*.js test/**/*.js",
-    "docs": "jsdoc -d docs -r -R README.md src/ && git add docs/* && git commit -m \"stage docs\" && git push",
+    "lintfix": "jscs --fix lib/ test/",
+    "postlint": "jshint lib/ test/",
+    "docs": "jsdoc -d docs -r -R README.md lib/ && git add docs/* && git commit -m \"stage docs\" && git push",
     "deploy-docs": "gh-pages -d docs",
     "postpublish": "npm run docs && npm run deploy-docs"
   },
